# zkgpu

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  rust-toolchain.toml
apps/android-harness/: .gitignore  settings.gradle.kts
apps/android-harness/app/: build.gradle.kts
apps/android-harness/rust/: README.md
apps/ios-harness/: README.md  project.yml
apps/ios-harness/RustBridge/: README.md  build_ios_staticlibs.sh  run_ios_tests.sh
apps/ios-harness/ZkgpuHarness/: AppDelegate.swift  ContentView.swift  ZkgpuBridge.swift  ZkgpuHarnessApp.swift
apps/ios-harness/ZkgpuHarness.xcodeproj/: project.pbxproj
apps/ios-harness/ZkgpuHarness/Resources/: Info.plist
apps/ios-harness/ZkgpuHarnessTests/: ZkgpuHarnessTests.swift
apps/ios-harness/ZkgpuHarnessUITests/: ZkgpuHarnessPoseidon2UITests.swift  ZkgpuHarnessUITests-Bridging-Header.h
apps/web-harness/: .gitignore  index.html  package-lock.json  package.json  playwright.bstack.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web-harness/src/: main.ts  types.ts  vite-env.d.ts  worker.ts
apps/web-harness/tests/: bstack-fixture.ts  bstack-global-setup.ts  bstack-global-teardown.ts  g02_tail_ab.spec.ts  smoke.spec.ts
crates/zkgpu-babybear/: Cargo.toml
crates/zkgpu-babybear/src/: lib.rs
crates/zkgpu-cli/: Cargo.toml
crates/zkgpu-cli/src/: main.rs
crates/zkgpu-core/: Cargo.toml
crates/zkgpu-core/src/: device.rs  error.rs  field.rs  lib.rs  ntt.rs  thread_safety.rs
crates/zkgpu-ffi/: Cargo.toml  cbindgen.toml
crates/zkgpu-ffi/include/: zkgpu_ffi.h
crates/zkgpu-ffi/src/: c_api.rs  json.rs  lib.rs  memory.rs  panic.rs
crates/zkgpu-goldilocks/: Cargo.toml
crates/zkgpu-goldilocks/src/: lib.rs
crates/zkgpu-koalabear/: Cargo.toml
crates/zkgpu-koalabear/src/: lib.rs
crates/zkgpu-ntt/: Cargo.toml
crates/zkgpu-ntt/src/: lib.rs
crates/zkgpu-openvm/: Cargo.toml
crates/zkgpu-openvm/benches/: openvm_commit.rs  openvm_prove.rs
crates/zkgpu-openvm/src/: bridge.rs  config.rs  gpu_mmcs.rs  lib.rs
crates/zkgpu-openvm/tests/: commit_parity.rs  open_verify_parity.rs  prove_verify_openvm.rs
crates/zkgpu-openvm/tests/support/: engine.rs
crates/zkgpu-pacer/: Cargo.toml
crates/zkgpu-pacer/src/: android_adpf.rs  apple_thermal.rs  drift.rs  lib.rs  observation.rs
crates/zkgpu-plonky3/: Cargo.toml  FUTURE_WORK.md
crates/zkgpu-plonky3/benches/: gpu_vs_cpu_dft.rs  prover_hot_path.rs
crates/zkgpu-plonky3/src/: gpu_mmcs.rs  lib.rs  poseidon2_bridge.rs
crates/zkgpu-plonky3/tests/: fri_commit_parity_keccak.rs  fri_commit_parity_poseidon2.rs  poseidon2_bridge_differential.rs  poseidon2_bridge_gpu.rs  poseidon2_merkle_commit_dag_gpu.rs  poseidon2_merkle_commit_dag_w16_gpu.rs  poseidon2_merkle_commit_gpu.rs  poseidon2_merkle_leaf_gpu.rs  poseidon2_merkle_leaf_w16_gpu.rs  poseidon2_merkle_open_dag_gpu.rs  poseidon2_mmcs_gpu.rs  prove_verify_keccak.rs  prove_verify_poseidon2.rs
crates/zkgpu-poseidon2/: Cargo.toml
crates/zkgpu-poseidon2/src/: lib.rs
crates/zkgpu-report/: Cargo.toml
crates/zkgpu-report/src/: lib.rs
crates/zkgpu-tail-analyze/: Cargo.toml
crates/zkgpu-tail-analyze/src/: lib.rs  main.rs
crates/zkgpu-testkit/: Cargo.toml
crates/zkgpu-testkit/src/: benchmark.rs  case.rs  device.rs  hash_runner.rs  inputs.rs  lib.rs  report.rs  runner.rs  suite.rs  validation.rs
crates/zkgpu-web/: Cargo.toml
crates/zkgpu-web/src/: device.rs  hash_runner.rs  inputs.rs  lib.rs  runner.rs  validation.rs
crates/zkgpu-web/tests/: browser_smoke.rs
crates/zkgpu-wgpu/: Cargo.toml
crates/zkgpu-wgpu/benches/: ntt_bench.rs  ntt_r4_param_mode.rs  poseidon2_constants_source.rs
crates/zkgpu-wgpu/src/: async_util.rs  buffer.rs  canary.rs  caps.rs  device.rs  dispatch.rs  field_codec.rs  lib.rs  pipeline_cache.rs  pipeline_registry.rs  profiling.rs
crates/zkgpu-wgpu/src/caps/: classify.rs  detect.rs  mod.rs  profile.rs  quirks.rs  scoring.rs  types.rs
crates/zkgpu-wgpu/src/kernels/native/: babybear_stockham_local_subgroup.comp  babybear_stockham_local_subgroup.spv  babybear_stockham_local_subgroup.wgsl
crates/zkgpu-wgpu/src/kernels/portable/: babybear_fourstep_leaf_r2.wgsl  babybear_fourstep_leaf_r4.wgsl  babybear_fourstep_leaf_r8.wgsl  babybear_fourstep_transpose.wgsl  babybear_fourstep_transpose_tiled32.wgsl  babybear_fourstep_twiddle.wgsl  babybear_poseidon2.wgsl  babybear_poseidon2_interleave_pairs.wgsl  babybear_poseidon2_merkle_compress.wgsl  babybear_poseidon2_merkle_leaf.wgsl  babybear_poseidon2_merkle_leaf_w16.wgsl  babybear_poseidon2_plonky3_w16.wgsl  babybear_poseidon2_plonky3_w24.wgsl  babybear_poseidon2_uniform.wgsl  babybear_scale.wgsl  babybear_stockham_local.wgsl  babybear_stockham_local_r4.wgsl  babybear_stockham_r2.wgsl  babybear_stockham_r2_batched.wgsl  babybear_stockham_r4.wgsl  babybear_stockham_r4_batched.wgsl  babybear_stockham_r4_immediate.wgsl  goldilocks_arith.wgsl  goldilocks_arith_helpers.wgsl  goldilocks_poseidon2.wgsl  goldilocks_scale.wgsl  goldilocks_stockham_r2.wgsl  goldilocks_stockham_r4.wgsl
crates/zkgpu-wgpu/src/ntt/: babybear_twiddles.rs  batched.rs  common.rs  four_step.rs  local_kernel.rs  mod.rs  planner.rs  stockham.rs  twiddles.rs
crates/zkgpu-wgpu/src/ntt/four_step/: build.rs  encode.rs  mod.rs  params.rs
crates/zkgpu-wgpu/src/ntt/goldilocks/: arith_test.rs  mod.rs  plan.rs  resolve.rs
crates/zkgpu-wgpu/src/ntt/planner/: constants.rs  four_step_config.rs  mod.rs  policy.rs  stockham_config.rs  tail_policy.rs  tests.rs
crates/zkgpu-wgpu/src/ntt/stockham/: build.rs  encode.rs  mod.rs  profiled.rs
crates/zkgpu-wgpu/src/poseidon2/: goldilocks_plan.rs  interleave_pairs.rs  merkle_commit.rs  merkle_commit_dag.rs  merkle_compress.rs  merkle_leaf.rs  merkle_leaf_w16.rs  mod.rs  plan.rs  plonky3_plan.rs
crates/zkgpu-wgpu/tests/: gpu_ntt_validation.rs
docs/: two-consumers.md
docs/research/: item5-bind-group-reuse-verdict.md  openvm-poseidon2-mmcs.md  plonky3-poseidon2-mmcs.md  poseidon2-uniform-pilot-verdict.md  r4-immediate-pilot-verdict.md  zkgpu-wgpu-speed-opportunities.md
xtask/src/: main.rs
(+87 files in other folders)
