[package]
name = "zkgpu-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
zkgpu-testkit = { workspace = true }
zkgpu-report = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
