[package]
name = "zkgpu-plonky3"
description = "Adapter between zkgpu and Plonky3 field/DFT interfaces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
zkgpu-core = { workspace = true }
zkgpu-babybear = { workspace = true }
zkgpu-wgpu = { workspace = true }
# Step 1.5a — Plonky3-interop Poseidon2 params in the bridge module.
zkgpu-poseidon2 = { workspace = true }
p3-poseidon2 = "0.5"

# Plonky3 0.5 — matches p3-zk-proofs pin, which is our primary
# correctness-oracle consumer crate.
p3-baby-bear = "0.5"
p3-dft = "0.5"
p3-field = "0.5"
p3-matrix = "0.5"
p3-util = "0.5"

# Phase 7 Step 3 — GPU Poseidon2 MMCS adapter (gpu_mmcs module)
# implements p3_commit::Mmcs, builds a lazy CPU tree via
# p3_merkle_tree, and reuses Plonky3's Poseidon2 sponge +
# truncated-permutation types from p3_symmetric. These were
# dev-dependencies through Step 1.5b; the adapter in Step 3 needs
# them at library-build time.
p3-commit = "0.5"
p3-merkle-tree = "0.5"
p3-symmetric = "0.5"

pollster = { workspace = true }
tracing = "0.1"

[dev-dependencies]
# `NaiveDft` and `Radix2DitParallel` both live in `p3-dft` (already
# pulled in via the main dep). `p3-field-testing` provides Criterion
# helpers and proptest harnesses that we may leverage in the 7.4
# microbench; included here so tests share the same utilities.
p3-field-testing = "0.5"
rand = "0.10"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

# Phase 7.2.b — FRI commit parity tests. Same versions as
# p3-zk-proofs (our correctness-oracle reference config) to minimize
# resolver surface. Most dev-only. p3-commit / p3-merkle-tree /
# p3-symmetric were promoted to regular deps in Step 3 for the
# `gpu_mmcs` module; we re-enable the `test-utils` feature on
# `p3-commit` here for the dev-only opening/verification suites.
p3-commit = { version = "0.5", features = ["test-utils"] }
p3-challenger = "0.5"
p3-fri = "0.5"
p3-keccak = "0.5"

# Phase 7.2.c — end-to-end prove/verify with a minimal AIR.
p3-air = "0.5"
p3-uni-stark = "0.5"

# Phase 7 Step 1 (2026-04-22) — Poseidon2 MMCS target stack.
# CPU Poseidon2 implementation for parity witness and the Merkle-MMCS
# path that zkgpu-plonky3 optimizes against.
p3-poseidon2 = "0.5"

# Phase 7.4 — perf microbench.
criterion = { workspace = true }

[[bench]]
name = "gpu_vs_cpu_dft"
harness = false

# Phase 7 Step 1 — prover hot path (LDE + commit + prove) bench.
[[bench]]
name = "prover_hot_path"
harness = false
