[package]
name = "zkgpu-poseidon2"
description = "Poseidon2 permutation (field-parametric reference) for zkgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
zkgpu-core = { workspace = true }

[dev-dependencies]
zkgpu-babybear = { workspace = true }
zkgpu-koalabear = { workspace = true }
zkgpu-goldilocks = { workspace = true }
