[package]
name = "zkgpu-report"
description = "Shared report and spec types for zkgpu (native + browser)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
