[package]
name = "zkgpu-wgpu"
description = "wgpu backend for zkgpu (Metal, Vulkan, DX12, WebGPU)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
## Enable the subgroup-accelerated DIT local kernel on Vulkan via
## pre-compiled SPIR-V. Bypasses Naga's missing `enable subgroups;`
## support (gfx-rs/wgpu#5555). Requires Vulkan 1.1+, SUBGROUP feature
## with min_subgroup_size >= 32, and ZKGPU_EXPERIMENTAL_VK_SUBGROUP=1
## env var for Auto activation. ForceSubgroup bypasses the env gate.
subgroup-vulkan-spirv = ["wgpu/spirv"]

[dependencies]
zkgpu-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }

[dependencies.zkgpu-babybear]
workspace = true

[dependencies.zkgpu-ntt]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "ntt_bench"
harness = false
