[package]
name = "zkgpu-wgpu"
description = "wgpu backend for zkgpu (Metal, Vulkan, DX12, WebGPU)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Opt-in native-Vulkan int64 kernels for Goldilocks. When off (the
# default), only the portable `u32x2` WGSL variant is compiled in and
# the `SHADER_INT64` device feature is never requested. Turn this on
# for a Vulkan native build when you have field-measured evidence
# that int64 is faster on the target (backend, gpu_family, driver).
goldilocks-vulkan-int64 = []

[dependencies]
zkgpu-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }

[dependencies.zkgpu-babybear]
workspace = true

[dependencies.zkgpu-ntt]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
criterion = { workspace = true }
# Goldilocks (u64) CPU reference, for GPU differential tests of the
# portable u32x2 arithmetic primitives. Dev-only — never reaches the
# shipping crate surface.
zkgpu-goldilocks = { workspace = true }
pollster = { workspace = true }

[[bench]]
name = "ntt_bench"
harness = false
